--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
     <p>See console</p>
 
     <script>
-    console.log('hello world');
-    
-    var x = 7;
-    var y = 12;
-    var sum = x + y;
+        var x = 100;
 
-    console.log('the sum is', sum);
+        for(var i = 0; i <= x; i++) {
+            console.log('inside loop, i is', i);
+        }
     </script>
 </body>
 </html>
